gcc/testsuite/rust/rustc/ui/block-result/issue-3563.rs
trait A {
    fn a(&self) {
        || self.b()
// { dg-error ".E0599." "" { target *-*-* } .-1 }
    }
}
fn main() {}

